Update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="container navbar-container">
         <button class="navbar-close">
           <svg class="navbar-close-icon" width="16" height="16">
-            <use href="./images/close.svg"></use>
+            <use href="./img/close.svg"></use>
           </svg>
         </button>
 
@@ -35,7 +35,7 @@
           <ul class="navbar-nav-list">
             <a class="navbar-logo">
               <svg class="navbar-logo-icon" width="84px" height="36px">
-                <use href="./images/company-logo.svg"></use>
+                <use href="./img/company-logo.svg"></use>
               </svg>
             </a>
             <li class="navbar-nav-list-item">
