--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
   <section class="navbar-section">
-    <div class="navbar.is-open">
+    <div class="navbar is-open">
       <div class="container navbar-container">
         <button class="navbar-close">
           <svg class="navbar-close-icon" width="16" height="16">
