--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
           <nav class="navbar-nav">
             <ul class="navbar-nav-list">
-              <a class="navbar-logo">
+              <a class="navbar-logo" href="./index.html">
                 <svg class="navbar-logo-icon" width="84px" height="36px">
                   <use href="./img/sprite.svg#icon-company-logo"></use>
                 </svg>
